# mklab-keygen

./: .env.example  .gitignore  README.md  SWAPS_Project_Plan_MVP.docx  SWAPS_Project_Plan_MVP.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: Dockerfile.api  docker-compose.prod.yml  docker-compose.yml
deploy/certbot/: README.md
deploy/nginx/: nginx.conf  nginx.ssl.conf
docs/: api-reference.md  deployment-runbook.md  integration-guide.md  security-scan.md  uat-checklist.md
sdk/: README.md  pyproject.toml
sdk-js/: README.md  package.json
sdk-js/src/: enforcer.js  exceptions.js  index.js  protect.js  signature.js  validate.js
sdk/app_protection/: __init__.py  client.py  config.py  enforcer.py  exceptions.py  scheduler.py  storage.py
server/app/: __init__.py  main.py
server/app/api/: deps.py
server/app/api/routes/: admin.py  auth.py  licenses.py
server/app/core/: config.py  database.py  rate_limit.py  security.py
server/app/models/: __init__.py  admin.py  application.py  base.py  license.py  validation_log.py
server/app/schemas/: auth.py  license.py
server/app/services/: license_service.py
server/app/templates/: base.html
server/app/templates/admin/: audit.html  dashboard.html  license_edit.html  license_form.html  license_history.html  login.html
server/migrations/: env.py
server/migrations/versions/: 001_initial_schema.py  README
server/scripts/: seed_admin.py
server/tests/: __init__.py  conftest.py  test_health.py
server/tests/integration/: test_auth_api.py  test_license_api.py  test_validation_scenarios.py
server/tests/unit/: test_license_key_gen.py  test_license_service.py  test_rate_limit.py  test_security.py
tests/: locustfile.py
