[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app-protection"
version = "0.1.0"
description = "SWAPS Client SDK — license validation and monthly enforcement"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app_protection*"]
